# quad_manipulator

./: README.md
quad_manipulator_control/: CMakeLists.txt  package.xml
quad_manipulator_control/config/: manipulator_effortcontrol.yaml  manipulator_positioncontrol.yaml
quad_manipulator_control/launch/: manipulator_control.launch  mavros_posix_sitl.launch  posix_sitl.launch
quad_manipulator_control/src/: broadcaster_base_world.cpp  image_circlemarkers_detection.cpp  listener_arm_pose.cpp  manipulator_velocity_node.cpp  quad_manipulator_startup.cpp  quad_velocity_control.cpp
quad_manipulator_description/: CMakeLists.txt  package.xml
quad_manipulator_description/launch/: display.launch
quad_manipulator_description/meshes/: arm_link_2.STL  grasp_link_2.STL  rotor_link_0.STL  rotor_link_1.STL  rotor_link_2.STL  rotor_link_3.STL
quad_manipulator_description/models/april_tag0/: model.sdf
quad_manipulator_description/models/april_tag1/: model.sdf
quad_manipulator_description/models/april_tag2/: model.sdf
quad_manipulator_description/models/april_tag3/: model.sdf
quad_manipulator_description/models/apriltags/: model.config  model.sdf
quad_manipulator_description/models/apriltags/materials/scripts/: textures.material
quad_manipulator_description/models/blob_points/: model.config  model.sdf
quad_manipulator_description/models/blob_points/materials/scripts/: blob_points.material
quad_manipulator_description/models/object_002/: model.config  model.sdf
quad_manipulator_description/models/object_apriltag0/: model.config  model.sdf
quad_manipulator_description/models/quad_manipulator/: model.config  quad_manipulator.sdf
quad_manipulator_description/models/quad_manipulator/meshes/: arm_base_link.STL  arm_link_1.STL  arm_link_3.STL  camera_link.STL  grasp_link_1.STL
quad_manipulator_description/rviz/: rviz_configure.rviz
quad_manipulator_description/urdf/: quad_manipulator.gazebo  quad_manipulator.xacro
quad_manipulator_gazebo/: CMakeLists.txt  package.xml
quad_manipulator_gazebo/launch/: quad_manipulator_world.launch
quad_manipulator_gazebo/worlds/: impedancecontrol.world  quad_manipulator.world
