<package>
  <name>quad_manipulator_gazebo</name>
  <version>0.1.0</version>
  <description>quad_manipulator_gazebo</description>
  <maintainer email="zhonghang@hnu.edu.cn">zhonghang</maintainer>

  <license>BSD</license>

  <url type="website">http://www.aimiplus.com</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="zhonghang@hnu.edu.cn">zhonghang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>quad_manipulator_control</run_depend>
  <run_depend>quad_manipulator_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
